Add names of the translators

--- a/models/translated.ini
+++ b/models/translated.ini
@@ -21,3 +21,7 @@ type = string
 [fields.sort_key]
 label = Sort order
 type = sort_key
+
+[fields.translation_author]
+label = Translation Author
+type = string
