Add VK icon + url for the translators

--- a/models/translated.ini
+++ b/models/translated.ini
@@ -25,3 +25,7 @@ type = sort_key
 [fields.translation_author]
 label = Translation Author
 type = string
+
+[fields.translation_author_vk_url]
+label = Translation Author Vk URL
+type = url
